# lms_drf

./: .env.sample  .gitignore  compose.yaml  db.json  db_payment_table.json  pyproject.toml
conf/: celery.py  settings.py  urls.py
learning_materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
learning_materials/migrations/: 0001_initial.py  0002_lesson_course_alter_lesson_video_link.py  0003_alter_lesson_course_payment.py  0004_alter_payment_course_alter_payment_lesson.py  0005_alter_payment_amount.py  0006_course_user_lesson_user.py  0007_alter_payment_options_alter_course_description_and_more.py  0008_subscription_unique_subscription.py  0009_alter_course_options_alter_lesson_options.py
users/: models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_email.py
